--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,14 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		 <!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.8</version>
+		</dependency>
+		 
 	</dependencies>
 
 	<build>
